wait on specific client, add running status for task, debug client